--- a/.github/工作流程/signin.yml
+++ b/.github/工作流程/signin.yml
@@ -12,17 +12,7 @@ jobs:
     steps:
       - uses: ImYrS/aliyun-auto-signin@main
         with:
-          REFRESH_TOKENS: ${{6990b079b0c142a88ca0064fe97eada5}}
+          REFRESH_TOKENS: ${{ secrets.REFRESH_TOKENS }}
           GP_TOKEN: ${{ secrets.GP_TOKEN}}
-          PUSH_TYPES: ''
-          SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          PUSHPLUS_TOKEN: ${{0b75fa937b124ac985f55d00a7de5c00}}
-          SMTP_HOST: ${{ secrets.SMTP_HOST }}
-          SMTP_PORT: ${{ secrets.SMTP_PORT }}
-          SMTP_TLS: ${{ secrets.SMTP_TLS }}
-          SMTP_USER: ${{ secrets.SMTP_USER }}
-          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-          SMTP_SENDER: ${{ secrets.SMTP_SENDER }}
-          SMTP_RECEIVER: ${{ secrets.SMTP_RECEIVER }}
+          PUSH_TYPES: 'pushplus'
+          PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
